--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^5.15.0"
+    "sequelize": "^5.15.0",
+    "sequelize-cli": "^5.5.0"
   }
 }
