--- a/src/db/config/config.json
+++ b/src/db/config/config.json
@@ -5,8 +5,7 @@
     "database": "travelerZ-dev",
     "host": "127.0.0.1",
     "dialect": "postgres",
-    "logging": false,
-    "operatorsAliases": false
+    "logging": false
   },
   "test": {
     "username": "zacharyguerrin",
@@ -14,8 +13,7 @@
     "database": "travelerZ-test",
     "host": "127.0.0.1",
     "dialect": "postgres",
-    "logging": false,
-    "operatorsAliases": false
+    "logging": false
   },
   "production": {
     "username": "root",
@@ -24,7 +22,6 @@
     "host": "127.0.0.1",
     "dialect": "postgres",
     "logging": false,
-    "operatorsAliases": false,
     "use_env_variable": "DATABASE_URL"
   }
 }
