--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "request": "^2.88.0"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^8.0.0",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
